Networking lecture split to 2 parts

--- a/epam/LinuxEssentials/08-1-networking.tex
+++ b/epam/LinuxEssentials/08-1-networking.tex
@@ -46,16 +46,10 @@
 \mode<all>{\input{../../slides/networking/alias_vlan}}
 \subsection{Мосты}
 \mode<all>{\input{../../slides/networking/bridge}}
-\subsection{Тоннели}
+\subsection{Виртуальные}
 \mode<all>{\input{../../slides/networking/tuntap}}
-
-\section{Маршрутизация}
-\mode<all>{\input{../../slides/networking/routing}}
-
-\section{iptables}
-\mode<all>{\input{../../slides/networking/iptables}}
-
-%\mode<all>{\input{../../slides/networking/practice}}
+\mode<all>{\input{../../slides/networking/macvlan}}
+\mode<all>{\input{../../slides/networking/veth}}
 
 \mode<all>\input{../branding/completion}
 \end{document}
