--- a/epam/LinuxEssentials/05-rpm.tex
+++ b/epam/LinuxEssentials/05-rpm.tex
@@ -1,6 +1,6 @@
 \input{../branding/common}
 
-\title{Введение в GNU/Linux}
+\title{Введение в GNU/Linux\\Управление пакетами}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
