--- a/epam/LinuxEssentials/08-2-networking.tex
+++ b/epam/LinuxEssentials/08-2-networking.tex
@@ -1,6 +1,6 @@
 \input{../branding/common}
 
-\title{Введение в GNU/Linux}
+\title{Сеть в ОС Linux}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
