Use common structure for Bash-scripting slides

--- a/epam/BashScripting/03-bash_syntax.tex
+++ b/epam/BashScripting/03-bash_syntax.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title[bash]{Bourne again shell}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -16,12 +16,6 @@
 	\end{center}
 \end{frame}
 
-\begin{frame}
-	\tableofcontents
-%	[hideallsubsections]
-\end{frame}
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
@@ -35,4 +29,9 @@
 
 \mode<all>{\input{../../slides/bash/loops}}
 
+\section{Домашнее задание}
+
+\mode<all>{\input{../../slides/bash/loops-hw}}
+
+\mode<all>\input{../branding/completion}
 \end{document}
