--- a/epam/BashScripting/06-bash_advanced.tex
+++ b/epam/BashScripting/06-bash_advanced.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title[bash]{Bourne again shell}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -15,12 +15,6 @@
 	%\frontpagelogo
 	\end{center}
 \end{frame}
-
-\begin{frame}
-	\tableofcontents
-%	[hideallsubsections]
-\end{frame}
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -49,4 +43,5 @@
 \end{center}
 \end{frame}
 
+\mode<all>\input{../branding/completion}
 \end{document}
