--- a/epam/BashScripting/02-bash_syntax.tex
+++ b/epam/BashScripting/02-bash_syntax.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title[bash]{Bourne again shell}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -15,12 +15,6 @@
 	%\frontpagelogo
 	\end{center}
 \end{frame}
-
-\begin{frame}
-	\tableofcontents
-%	[hideallsubsections]
-\end{frame}
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
@@ -40,4 +34,5 @@
 \mode<all>{\input{../../slides/bash/tests}}
 
 
+\mode<all>\input{../branding/completion}
 \end{document}
