--- a/epam/BashScripting/04-bash_syntax.tex
+++ b/epam/BashScripting/04-bash_syntax.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title[bash]{Bourne again shell}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -16,12 +16,6 @@
 	\end{center}
 \end{frame}
 
-\begin{frame}
-	\tableofcontents
-%	[hideallsubsections]
-\end{frame}
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
@@ -36,5 +30,5 @@
 
 \mode<all>{\input{../../slides/bash/functions}}
 
-
+\mode<all>\input{../branding/completion}
 \end{document}
