--- a/epam/BashScripting/05-bash_advanced.tex
+++ b/epam/BashScripting/05-bash_advanced.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title[bash]{Bourne again shell}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -16,12 +16,6 @@
 	\end{center}
 \end{frame}
 
-\begin{frame}
-	\tableofcontents
-%	[hideallsubsections]
-\end{frame}
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
@@ -38,5 +32,7 @@
 \section{Подстановка параметров}
 
 \mode<all>{\input{../../slides/bash/parameter_substitution}}
+
+\mode<all>\input{../branding/completion}
 
 \end{document}
