Added TOC to bash slides

--- a/epam/BashScripting/06-bash_advanced.tex
+++ b/epam/BashScripting/06-bash_advanced.tex
@@ -16,6 +16,10 @@
 	\end{center}
 \end{frame}
 
+\begin{frame}
+	\tableofcontents
+	[hideallsubsections]
+\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Content starts here %%%%%%%%%%
