Fixed some typos, make perf more represented than oprofile TODO: remove oprofile completely

--- a/epam/DevelopmentToolchain/08-profile.tex
+++ b/epam/DevelopmentToolchain/08-profile.tex
@@ -38,7 +38,7 @@
 \section{Gprof}
 \mode<all>{\input{../../slides/profile/gprof}}
 
-\section[oprofile]{Статистическое профилирование в oprofile}
+\section[oprofile]{Статистическое профилирование в perf}
 \mode<all>{\input{../../slides/profile/oprofile}}
 
 \end{document}
