DevelopmentToolchain: add branding

--- a/epam/DevelopmentToolchain/01-gcc_intro.tex
+++ b/epam/DevelopmentToolchain/01-gcc_intro.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title[toolchain]{GNU Toolchain}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -30,6 +30,5 @@
 
 \mode<all>{\input{../../slides/toolchain/gcc}}
 
-
-
+\mode<all>\input{../branding/completion}
 \end{document}
