--- a/epam/DevelopmentToolchain/02-linker_intro.tex
+++ b/epam/DevelopmentToolchain/02-linker_intro.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title[toolchain]{GNU Toolchain}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -38,4 +38,5 @@
 
 \mode<all>{\input{../../slides/toolchain/ld-examples}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
