--- a/epam/DevelopmentToolchain/03-make.tex
+++ b/epam/DevelopmentToolchain/03-make.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title[make]{Применение make.\\Автоматизация сборки программ}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -31,4 +31,5 @@
 \mode<all>{\input{../../slides/toolchain/gnu-make}}
 
 
+\mode<all>\input{../branding/completion}
 \end{document}
