--- a/epam/DevelopmentToolchain/04-elf.tex
+++ b/epam/DevelopmentToolchain/04-elf.tex
@@ -1,5 +1,4 @@
-\input{common}
-
+\input{../branding/common}
 \title[binutils]{Binutils. Анализ исполняемого файла}
 
 \begin{document}
@@ -39,4 +38,5 @@
 \section{Binutils}
 \mode<all>{\input{../../slides/elf-analysis/objdump}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
