--- a/epam/DevelopmentToolchain/07-valgrind.tex
+++ b/epam/DevelopmentToolchain/07-valgrind.tex
@@ -1,5 +1,4 @@
-\input{common}
-
+\input{../branding/common}
 \title[Отладка]{Отладка}
 
 \begin{document}
@@ -32,4 +31,5 @@
 \section{Valgrind}
 \mode<all>{\input{../../slides/debug/valgrind}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
