--- a/epam/DevelopmentToolchain/08-profile.tex
+++ b/epam/DevelopmentToolchain/08-profile.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 
 \title[Profiling]{Профилирование приложений}
 
@@ -41,4 +41,5 @@
 \section[oprofile]{Статистическое профилирование в perf}
 \mode<all>{\input{../../slides/profile/oprofile}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
