--- a/epam/DevelopmentToolchain/09-gcov.tex
+++ b/epam/DevelopmentToolchain/09-gcov.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 
 \title[Profiling]{Анализ тестового покрытия}
 
@@ -32,4 +32,5 @@
 \section{gcov}
 \mode<all>{\input{../../slides/profile/gcov}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
