--- a/epam/DevelopmentToolchain/11-autotools.tex
+++ b/epam/DevelopmentToolchain/11-autotools.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \mode<all>{\input{../../slides/toolchain/tikzinclude}}
 
 \title[Toolchain]{GNU autotools}
@@ -28,4 +28,5 @@
 
 \mode<all>{\input{../../slides/toolchain/autotools}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
