--- a/epam/DevelopmentToolchain/12-packaging.tex
+++ b/epam/DevelopmentToolchain/12-packaging.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 
 \title[RPM]{Пакетирование в ОС Linux\\на примере RPM}
 
@@ -30,10 +30,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Введение}
-% TODO: merge with intro1
-\mode<all>{\input{../../slides/packaging/intro}}
+\mode<all>{\input{../../slides/packaging/intro1}}
+
+\mode<all>{\input{../../slides/packaging/package_structure}}
 
 \section{RPM}
 \mode<all>{\input{../../slides/packaging/rpm_syntax}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
