--- a/epam/DevelopmentToolchain/13-version_control.tex
+++ b/epam/DevelopmentToolchain/13-version_control.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 
 \title[VCS]{Системы контроля версий}
 
@@ -39,4 +39,5 @@
 \section{Git}
 \mode<all>{\input{../../slides/vcs/git}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
