--- a/epam/DevelopmentToolchain/05-debug.tex
+++ b/epam/DevelopmentToolchain/05-debug.tex
@@ -1,5 +1,4 @@
-\input{common}
-
+\input{../branding/common}
 \title[Отладка]{Отладка}
 
 \begin{document}
@@ -40,4 +39,5 @@
 \section[strace]{Трассировка системных вызовов (strace,ltrace)}
 \mode<all>{\input{../../slides/debug/strace}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
