--- a/epam/DevelopmentToolchain/10-doxygen.tex
+++ b/epam/DevelopmentToolchain/10-doxygen.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \mode<all>{\input{../../slides/toolchain/tikzinclude}}
 
 \title[Toolchain]{Документирование кода}
@@ -28,4 +28,5 @@
 
 \mode<all>{\input{../../slides/toolchain/doxygen}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
