Update completion for cource 2017-2018
Signed-off-by: Denis Pynkin <denis.pynkin@collabora.com>

--- a/epam/branding/completion.tex
+++ b/epam/branding/completion.tex
@@ -2,14 +2,19 @@
     \setcounter{tocdepth}{2}
     \tableofcontents
 
-    \bigskip
+    \skip
 
+    \hline
     \begin{columns}
     \column{0.7\textwidth}
-            \url{https://yadi.sk/d/7EJu49zRwhqiw}
+            \center{Материалы:}
+            \url{https://yadi.sk/d/Ixp8kHfl3MipCq}
     \column{0.2\textwidth}
         \begin{center}
-            \includegraphics[width=0.7\textwidth]{url-qr-2016}
+            \includegraphics[width=0.7\textwidth]{url-qr-2017}
         \end{center}
     \end{columns}
+
+    Исходники: \url{https://github.com/epam-llpd/linux_courses}
+
 \end{frame}
