--- a/epam/branding/common.tex
+++ b/epam/branding/common.tex
@@ -13,7 +13,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-%%\usepackage[orientation=landscape, size=custom, width=16, height=9, scale=0.5]{beamerposter}
+%\usepackage[orientation=landscape, size=custom, width=16, height=9, scale=0.5]{beamerposter}
 
 \usepackage{textcomp}
 
