Package structure moved to separate file.
Signed-off-by: Denis Pynkin <denis.pynkin@collabora.com>

--- a/slides/packaging/intro1.tex
+++ b/slides/packaging/intro1.tex
@@ -24,7 +24,7 @@
     \textbf{RedHat-based}
   \end{center}
   \begin{itemize}
-    \item yum
+    \item dnf/yum
     \item rpm
   \end{itemize}
   \column{0.4\textwidth}
@@ -36,29 +36,4 @@
     \item dpkg
   \end{itemize}
 \end{columns}
-\end{frame}
-
-\begin{frame}{RPM: структура пакета}
-	\begin{itemize}
-		\item Метаданные
-			\begin{itemize}
-				\item Имя
-				\item Версия/Релиз
-				\item Группа
-				\item Описание
-				\item ...
-			\end{itemize}
-		\item Архив с файлами
-			\begin{itemize}
-				\item cpio
-			\end{itemize}
-		\item Скрипты
-			\begin{itemize}
-				\item Pre Install
-				\item Post Install
-				\item Pre Uninstall
-				\item Post Uninstall \bigskip
-				\item Triggers
-			\end{itemize}
-	\end{itemize}
 \end{frame}
