--- a/slides/elf-analysis/objdump.tex
+++ b/slides/elf-analysis/objdump.tex
@@ -15,7 +15,7 @@
 			\item {\tt objdump -{}-file-headers main-A\_B} -- получить заголовок файла
 			\item {\tt objdump -{}-section-headers main-A\_B} -- перечисление секций (для линковки)
 			\item {\tt objdump -{}-syms main-A\_B} -- список таблицы символов
-			\item {\tt objdump -{}-dynamic-syms main-A\_B} -- список динамических символов (как nm -u)
+			\item {\tt objdump -{}-dynamic-syms main-A\_B} -- список динамических символов (как nm -D)
 		\end{itemize}
 
 	\end{block}
