--- a/slides/profile/gcov.tex
+++ b/slides/profile/gcov.tex
@@ -25,7 +25,7 @@
   \begin{itemize}
     \item Как часто выполняется каждая строчка кода\footnote{покрытие по функциям, веткам исполнения}
     \item Какие именно строки кода были выполнены
-    \item Сколько времени заняло выполнение каждой секции
+    \item Как много времени программа проводит в каждой секции кода
   \end{itemize}
 \end{frame}
 
