Fix typos in completion slide
Signed-off-by: Denis Pynkin <denis.pynkin@collabora.com>

--- a/epam/branding/completion.tex
+++ b/epam/branding/completion.tex
@@ -2,9 +2,9 @@
     \setcounter{tocdepth}{2}
     \tableofcontents
 
-    \skip
+    \bigskip
 
-    \hline
+    \hrulefill
     \begin{columns}
     \column{0.7\textwidth}
             \center{Материалы:}
