Remove C/Python from the list

--- a/epam/slides/intro-epam.tex
+++ b/epam/slides/intro-epam.tex
@@ -20,8 +20,8 @@
 		\item Языки программирования
 			\begin{itemize}
 					\item shell (Bash)
-					\item Python
-					\item C
+%%					\item Python
+%%					\item C
 			\end{itemize}
 			\pause
 		\item Работа с классическими средствами разработки для ОС Linux
