Packaging slides refreshed
Signed-off-by: Denis Pynkin <denis.pynkin@collabora.com>

--- a/slides/packaging/intro1.tex
+++ b/slides/packaging/intro1.tex
@@ -1,7 +1,9 @@
 \begin{frame}{Система управления пакетами: для чего это нужно}
 \begin{itemize}
  \item ''DLL Hell''
+ \pause
  \item Dependency hell
+ \pause
  \item Общие задачи пакетного менеджера:
    \begin{itemize}
      \item Проверка целостности пакетов
