Fix lstlistings for bash examples
Signed-off-by: Denis Pynkin <denis.pynkin@collabora.com>

--- a/slides/bash/vars.tex
+++ b/slides/bash/vars.tex
@@ -39,7 +39,7 @@ echo $VAR
 			\item Добавить пробел до знака ''{\tt =}''
 			\item Добавить пробел после знака ''{\tt =}''
 			\item Присвоить переменной VAR значение: I love \$\$\$!
-			\item Создать переменные с другим именем и значением var 1var \_var var1
+			\item Создать переменные с другим именем и значением ''var'' ''1var'' ''\_var'' ''var1''
 		\end{itemize}
 	\end{block}
 
