GDB lecture uses splitted slides.

--- a/epam/DevelopmentToolchain/06-debug.tex
+++ b/epam/DevelopmentToolchain/06-debug.tex
@@ -29,7 +29,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section[gdb]{GNU отладчик gdb}
-\mode<all>{\input{../../slides/debug/gdb}}
+\mode<all>{\input{../../slides/debug/gdb-intro}}
+\mode<all>{\input{../../slides/debug/gdb-addons}}
+\subsection[gdb disasm]{Работа с программами без исходников}
+\mode<all>{\input{../../slides/debug/gdb-disasm}}
+\section[gdb server]{gdb server}
+\subsection[gdbserver]{Отладка программы на другом хосте}
+\mode<all>{\input{../../slides/containers/systemd_nspawn-infra_quick}}
+\mode<all>{\input{../../slides/debug/gdbserver-command}}
+\subsection[kernel]{отладка ядра}
+\mode<all>{\input{../../slides/debug/gdbserver-kernel}}
 
 \mode<all>\input{../branding/completion}
 \end{document}
