Remove oprofile from LDC slides

--- a/epam/DevelopmentToolchain/08-profile.tex
+++ b/epam/DevelopmentToolchain/08-profile.tex
@@ -38,8 +38,8 @@
 \section{Gprof}
 \mode<all>{\input{../../slides/profile/gprof}}
 
-\section[oprofile]{Статистическое профилирование в perf}
-\mode<all>{\input{../../slides/profile/oprofile}}
+\section{Профилирование в perf}
+\mode<all>{\input{../../slides/profile/perf}}
 
 \mode<all>\input{../branding/completion}
 \end{document}
