--- a/mlug/LinuxEssentials/01-intro.tex
+++ b/mlug/LinuxEssentials/01-intro.tex
@@ -26,30 +26,9 @@
 
 \section{О курсах}
 
-\begin{frame}{Преподаватели}
+\mode<all>{\input{../slides/trainers}}
 
-    \Large{Курс 2018\footnote{В алфавитном порядке}}:
-
-    \begin{columns}
-    \column{0.4\textwidth}
-        Адамов Юрий
-    \column{0.4\textwidth}
-        \begin{center}
-            \includegraphics[width=0.9\textwidth]{Promwad_logo.png}
-        \end{center}
-    \end{columns}
-
-    \begin{columns}
-    \column{0.4\textwidth}
-        Пынькин Денис
-    \column{0.4\textwidth}
-        \begin{center}
-            \includegraphics[width=0.5\textwidth]{COLLABORA_02_RGB.png}
-        \end{center}
-    \end{columns}
-\end{frame}
-
-\mode<all>{\input{../../epam/slides/intro-epam}}
+\mode<all>{\input{../slides/intro}}
 
 \section*{GNU/Linux}
 
@@ -86,10 +65,6 @@
 \subsection{Лицензии}
 
 \mode<all>{\input{../../slides/intro/licenses}}
-
-%%\subsection{Принципы проектирования переносимых программ}
-
-%%\mode<all>{\input{../../slides/intro/unixway}}
 
 \section{Дистрибутивы ОС Linux}
 
